--- a/parts__text.html
+++ b/parts__text.html
@@ -149,6 +149,6 @@
     <!-- Text common --------------------------------------------------------------------------->
     <!-- Text common --------------------------------------------------------------------------->
     <script src="js/lib/jquery-1.12.1.min.js"></script>
-    <script src="js/common.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
