ファイル整理

--- a/parts.html
+++ b/parts.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SLashNext|高品質で低価格なWebサイト制作サービス</title>
+    <!-- css --------------------------------------------------------------------------->
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/layout.css" />
+    <!-- script --------------------------------------------------------------------------->
+    <script src="js/lib/jquery-1.12.1.min.js" defer></script>
+    <script src="js/index.js" defer></script>
+    <!----------------------------------------------------------------------------->
   </head>
   <body>
     <style>
@@ -54,13 +58,13 @@
     <!-- about -->
     <div class="b-about__guidance">
       <p class="b-about__guidanceLabel">クライアント</p>
-      <img class="b-guidanceIcon" src="images/about_01.png" width="175px" height="175px" alt="" />
+      <img class="b-guidanceIcon" src="img/about_01.png" width="175px" height="175px" alt="" />
       <p class="b-about__guidanceText"><span class="br">高品質で低価格な</span>Webサイト</p>
     </div>
     <!-- service -->
     <div class="b-guidance b-guidance--service">
       <p class="b-guidanceNumber flame flame--orange">01</p>
-      <img class="b-guidanceIcon" src="images/service_01.png" width="150px" height="150px" alt="" />
+      <img class="b-guidanceIcon" src="img/service_01.png" width="150px" height="150px" alt="" />
       <p class="b-service__guidanceMainTitle">
         <span class="br b-service__guidanceSubTitle">様々なクリエイターが集結</span>
         最適なWebサイトを制作
@@ -70,24 +74,24 @@
     <div class="guidanceFlame" style="display: flex; flex-wrap: wrap; gap: 40px; padding: 50px">
       <div class="b-guidance b-guidance--reason">
         <p class="b-guidanceNumber flame flame--blue">01</p>
-        <img class="b-guidanceIcon" src="images/reason_01.png" width="180px" height="180px" alt="" />
+        <img class="b-guidanceIcon" src="img/reason_01.png" width="180px" height="180px" alt="" />
         <p class="b-reason__guidanceTitle">安定した人材確保</p>
       </div>
       <div class="b-guidance b-guidance--reason">
         <p class="b-guidanceNumber flame flame--blue">02</p>
-        <img class="b-guidanceIcon" src="images/reason_02.png" width="180px" height="180px" alt="" />
+        <img class="b-guidanceIcon" src="img/reason_02.png" width="180px" height="180px" alt="" />
         <p class="b-reason__guidanceTitle">最適な人材配置</p>
       </div>
       <div class="b-guidance b-guidance--reason">
         <p class="b-guidanceNumber flame flame--blue">03</p>
-        <img class="b-guidanceIcon" src="images/reason_03.png" width="180px" height="180px" alt="" />
+        <img class="b-guidanceIcon" src="img/reason_03.png" width="180px" height="180px" alt="" />
         <p class="b-reason__guidanceTitle"><span class="br">コミュニケーション</span>コストの削減</p>
       </div>
     </div>
     <!-- flow -->
     <div class="b-guidance b-guidance--flow">
       <p class="b-guidanceNumber flame flame--green">01</p>
-      <img class="b-guidanceIcon" src="images/flow_01.png" width="100px" height="100px" alt="" />
+      <img class="b-guidanceIcon" src="img/flow_01.png" width="100px" height="100px" alt="" />
       <p class="b-flow__guidanceTitle">ご依頼</p>
     </div>
 
@@ -236,7 +240,5 @@
     <!-- Text common --------------------------------------------------------------------------->
     <!-- Text common --------------------------------------------------------------------------->
     <!-- Text common --------------------------------------------------------------------------->
-    <script src="js/lib/jquery-1.12.1.min.js"></script>
-    <script src="js/index.js"></script>
   </body>
 </html>
