--- a/parts__text.html
+++ b/parts__text.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SLashNext|高品質で低価格なWebサイト制作サービス</title>
+    <!-- css --------------------------------------------------------------------------->
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/layout.css" />
+    <!-- script --------------------------------------------------------------------------->
+    <script src="js/lib/jquery-1.12.1.min.js" defer></script>
+    <script src="js/index.js" defer></script>
+    <!----------------------------------------------------------------------------->
   </head>
   <body>
     <style>
@@ -148,7 +152,5 @@
     <!-- Text common --------------------------------------------------------------------------->
     <!-- Text common --------------------------------------------------------------------------->
     <!-- Text common --------------------------------------------------------------------------->
-    <script src="js/lib/jquery-1.12.1.min.js"></script>
-    <script src="js/index.js"></script>
   </body>
 </html>
