linkファイル設定

--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SLashNext|高品質で低価格なWebサイト制作サービス</title>
+    <!-- css --------------------------------------------------------------------------->
     <link rel="stylesheet" href="css/style.css" />
-
+    <!-- script --------------------------------------------------------------------------->
+    <script src="js/lib/jquery-1.12.1.min.js" defer></script>
+    <script src="js/index.js" defer></script>
+    <!----------------------------------------------------------------------------->
     <!-- ガイドライン表示表スタイル（サーバーへのアップロード不要） -->
     <link rel="stylesheet" href="css/guide.css" />
   </head>
@@ -15,32 +19,19 @@
       <header class="header"></header>
 
       <main class="contents">
-        <!-- この中↓にセクションをいれていく -->
-
         <section class="l-S01 s-uniqueName">
           <div class="l-S02">
             <div class="l-S03">
               <div class="l-L01">
-                <div class="l-L02">あああ</div>
-                <div class="l-L03">いいい</div>
+                <div class="l-L02"></div>
+                <div class="l-L03"></div>
               </div>
-
-              <div class="l-L04">
-                <div class="l-L05">ううう</div>
-              </div>
-
-              <div class="l-L06"></div>
             </div>
           </div>
         </section>
-
-        <!-- この中↑にセクションをいれていく -->
       </main>
 
       <footer class="footer"></footer>
     </div>
-
-    <script src="js/lib/jquery-1.12.1.min.js"></script>
-    <script src="js/common.js"></script>
   </body>
 </html>
