heroレイアウト

--- a/index.html
+++ b/index.html
@@ -19,13 +19,22 @@
       <header class="header"></header>
 
       <main class="contents">
-        <section class="l-S01 s-uniqueName">
+        <div class="l-S01 s-hero">
           <div class="l-S02">
             <div class="l-S03">
               <div class="l-L01">
                 <div class="l-L02"></div>
                 <div class="l-L03"></div>
               </div>
+            </div>
+          </div>
+        </div>
+
+        <section class="l-S01 s-about">
+          <div class="l-S02">
+            <div class="l-L01">
+              <div class="l-L02"></div>
+              <div class="l-L03"></div>
             </div>
           </div>
         </section>
