--- a/parts.html
+++ b/parts.html
@@ -24,7 +24,7 @@
       <div class="l-S01">
         <div class="l-L01">
           <h1 class="b-logo">
-            <a href="#">SLashNext</a>
+            <a href="index.html">SLashNext</a>
           </h1>
         </div>
         <nav class="l-L02">
