--- a/index.html
+++ b/index.html
@@ -32,9 +32,58 @@
 
         <section class="l-S01 s-about">
           <div class="l-S02">
-            <div class="l-L01">
-              <div class="l-L02"></div>
-              <div class="l-L03"></div>
+            <div class="l-S03">
+              <div class="l-L01">
+                <h2 class="b-heading__title icon icon--pink"><span class="emphasis">SLashNext</span>とは</h2>
+              </div>
+              <div class="l-L02">
+                <p class="b-heading__text">
+                  クリエイティブ集団が制作を請け負う、高品質・低価格なWebサイト制作サービスです。
+                </p>
+                <p class="b-heading__text">
+                  株式会社CRANKSと幅広い強みを持ったクリエイターのタッグであなたの抱える課題解決に最適なご提案を。
+                </p>
+              </div>
+            </div>
+
+            <div class="l-L04">
+              <div class="l-L05">
+                <div class="b-aboutContents">
+                  <p class="b-aboutContents__label">強みを持ったクリエイター</p>
+                  <img class="b-guidance__icon" src="img/about_01.png" width="175px" height="175px" alt="" />
+                  <p class="b-aboutContents__text"><span class="br">高品質で低価格な</span>Webサイト</p>
+                </div>
+                <div class="b-aboutContents">
+                  <p class="b-aboutContents__label">クライアント</p>
+                  <img class="b-guidance__icon" src="img/reason_01.png" width="175px" height="175px" alt="" />
+                  <p class="b-aboutContents__text"><span class="br">自分の強みを</span>活かせる案件</p>
+                </div>
+              </div>
+            </div>
+            <div class="l-S03">
+              <div class="l-L06">
+                <h3 class="b-contents__title">SLashNextができること</h3>
+              </div>
+              <div class="l-L07">
+                <div class="b-aboutReception__box">
+                  <figure class="b-boxFlame__lineCircle b-boxFlame__lineCircle--pink">
+                    <img src="img/アセット 2@2x-8.png" alt="" />
+                  </figure>
+                  <p class="b-aboutReception__text">Webサイト制作</p>
+                </div>
+                <div class="b-aboutReception__box">
+                  <figure class="b-boxFlame__lineCircle b-boxFlame__lineCircle--pink">
+                    <img src="img/アセット 6@2x-8.png" alt="" />
+                  </figure>
+                  <p class="b-aboutReception__text"><span class="spbr">ランディング</span>ページ制作</p>
+                </div>
+                <div class="b-aboutReception__box">
+                  <figure class="b-boxFlame__lineCircle b-boxFlame__lineCircle--pink">
+                    <img src="img/アセット 5@2x-8.png" alt="" />
+                  </figure>
+                  <p class="b-aboutReception__text"><span class="br">Webサイトの</span>リニューアル</p>
+                </div>
+              </div>
             </div>
           </div>
         </section>
