--- a/parts__text.html
+++ b/parts__text.html
@@ -37,10 +37,10 @@
     <p class="b-heading__text">
       株式会社CRANKSと幅広い強みを持ったクリエイターのタッグであなたの抱える課題解決に最適なご提案を。
     </p>
-    <p class="b-aboutContents__label">クライアント</p>
-    <p class="b-aboutContents__text"><span class="br">高品質で低価格な</span>Webサイト</p>
+    <p class="b-aboutContents__boxLabel">クライアント</p>
+    <p class="b-aboutContents__boxText"><span class="br">高品質で低価格な</span>Webサイト</p>
     <h3 class="b-contents__title">SLashNextができること</h3>
-    <p class="b-aboutReception__text">Webサイト制作</p>
+    <p class="b-aboutReception__boxText">Webサイト制作</p>
 
     <!-- Text service --------------------------------------------------------------------------->
     <h2 class="b-heading__title icon icon--orange">サービスの<span class="emphasis">特徴</span></h2>
