service　PCレイアウト作成

--- a/index.html
+++ b/index.html
@@ -104,6 +104,90 @@
             </div>
           </div>
         </section>
+
+        <section class="l-S01 s-service">
+          <div class="l-S02">
+            <div class="l-S03">
+              <div class="l-L01">
+                <div class="l-L02">
+                  <h2 class="b-heading__title icon icon--orange">サービスの<span class="emphasis">特徴</span></h2>
+                </div>
+                <div class="l-L03">
+                  <p class="b-heading__text">様々な課題に対し、最適なクリエイターが制作を行います。</p>
+                  <p class="b-heading__text">
+                    疑問などにもしっかりとサポート対応いたしますので、安心してお任せください。
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="l-L04">
+              <div class="l-L05 b-aboutContents">
+                <div class="b-guidance b-guidance--service">
+                  <p class="b-guidance__number flame flame--orange">01</p>
+                  <img class="b-guidance__icon" src="img/service_guidance_01.png" width="150px" height="150px" alt="" />
+                  <p class="b-serviceGuidance__mainTitle">
+                    <span class="br b-serviceGuidance__subTitle">様々なクリエイターが集結</span>
+                    最適なWebサイトを制作
+                  </p>
+                </div>
+                <div class="b-guidance b-guidance--service">
+                  <p class="b-guidance__number flame flame--orange">02</p>
+                  <img class="b-guidance__icon" src="img/service_guidance_02.png" width="150px" height="150px" alt="" />
+                  <p class="b-serviceGuidance__mainTitle">
+                    <span class="br b-serviceGuidance__subTitle">細やかな対応で不安感を払拭</span>
+                    「わからない」をゼロに
+                  </p>
+                </div>
+                <div class="b-guidance b-guidance--service">
+                  <p class="b-guidance__number flame flame--orange">03</p>
+                  <img class="b-guidance__icon" src="img/service_guidance_03.png" width="150px" height="150px" alt="" />
+                  <p class="b-serviceGuidance__mainTitle">
+                    <span class="br b-serviceGuidance__subTitle">制作における見えないコストを削減</span>
+                    低価格の実現
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="l-S03">
+              <div class="l-L06">
+                <div class="l-L07">
+                  <div class="l-L08">
+                    <h3 class="b-contents__title">
+                      <span class="br b-serviceContents__subTitle">様々な強みを持ったクリエイターが集結</span
+                      >最適なWebサイトを制作
+                    </h3>
+                  </div>
+                  <div class="l-L09">
+                    <div class="kari-1 b-boxFlame__line b-boxFlame__line--yellow"></div>
+                    <div class="kari-2 b-boxFlame__line b-boxFlame__line--yellow"></div>
+                    <div class="kari-3 b-boxFlame__line b-boxFlame__line--yellow"></div>
+                  </div>
+                </div>
+                <div class="l-L10">
+                  <div class="l-L11">
+                    <h3 class="b-contents__title">
+                      <span class="br b-serviceContents__subTitle">細やかな対応で不安感を払拭</span>
+                      「わからない」をゼロに
+                    </h3>
+                  </div>
+                  <div class="l-L12"><div class="kari-4 b-boxFlame__line b-boxFlame__line--yellow"></div></div>
+                </div>
+                <div class="l-L13">
+                  <div class="l-L14">
+                    <h3 class="b-contents__title">
+                      <span class="br b-serviceContents__subTitle">制作における見えないコストを削減</span>低価格の実現
+                    </h3>
+                  </div>
+                  <div class="l-L15">
+                    <div class="kari-5 b-boxFlame__line b-boxFlame__line--yellow"></div>
+                    <div class="kari-6 b-boxFlame__line b-boxFlame__line--yellow"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
 
       <footer class="footer"></footer>
