--- a/parts.html
+++ b/parts.html
@@ -56,7 +56,7 @@
     </header>
     <!-- flame common --------------------------------------------------------------------------->
     <!-- about -->
-    <div class="b-aboutContents">
+    <div class="b-aboutContents_box">
       <p class="b-aboutContents__boxLabel">クライアント</p>
       <img class="b-guidance__icon" src="img/about_contents_01.png" width="175px" height="175px" alt="" />
       <p class="b-aboutContents__boxText"><span class="br">高品質で低価格な</span>Webサイト</p>
