--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="b-aboutContents__box">
                   <p class="b-aboutContents__boxLabel">クライアント</p>
                   <img
-                    class="b-aboutContents__boxIcon"
+                    class="b-aboutContents__boxIcon b-image"
                     src="img/about_contents_01.png"
                     width="175px"
                     height="175px"
@@ -61,11 +61,13 @@
                   />
                   <p class="b-aboutContents__boxText"><span class="br">高品質で低価格な</span>Webサイト</p>
                 </div>
-                <picture class="b-aboutContents__icon"><img src="img/about_contents_02.png" alt="" /></picture>
+                <picture class="b-aboutContents__icon"
+                  ><img class="b-image" src="img/about_contents_02.png" alt=""
+                /></picture>
                 <div class="b-aboutContents__box">
                   <p class="b-aboutContents__boxLabel">強みを持ったクリエイター</p>
                   <img
-                    class="b-aboutContents__boxIcon"
+                    class="b-aboutContents__boxIcon b-image"
                     src="img/about_contents_03.png"
                     width="175px"
                     height="175px"
@@ -83,19 +85,19 @@
                 <div class="l-L08 b-aboutReception">
                   <div class="b-aboutReception__box">
                     <figure class="b-boxFlame__lineCircle b-boxFlame__lineCircle--pink">
-                      <img src="img/about_reception_01.png" alt="" />
+                      <img class="b-image" src="img/about_reception_01.png" alt="" />
                     </figure>
                     <p class="b-aboutReception__boxText">Webサイト制作</p>
                   </div>
                   <div class="b-aboutReception__box">
                     <figure class="b-boxFlame__lineCircle b-boxFlame__lineCircle--pink">
-                      <img src="img/about_reception_02.png" alt="" />
+                      <img class="b-image" src="img/about_reception_02.png" alt="" />
                     </figure>
                     <p class="b-aboutReception__boxText"><span class="spbr">ランディング</span>ページ制作</p>
                   </div>
                   <div class="b-aboutReception__box">
                     <figure class="b-boxFlame__lineCircle b-boxFlame__lineCircle--pink">
-                      <img src="img/about_reception_03.png" alt="" />
+                      <img class="b-image" src="img/about_reception_03.png" alt="" />
                     </figure>
                     <p class="b-aboutReception__boxText"><span class="br">Webサイトの</span>リニューアル</p>
                   </div>
@@ -121,11 +123,11 @@
               </div>
             </div>
 
-            <div class="l-L04">
+            <!-- <div class="l-L04">
               <div class="l-L05 b-aboutContents">
                 <div class="b-guidance b-guidance--service">
                   <p class="b-guidance__number flame flame--orange">01</p>
-                  <img class="b-guidance__icon" src="img/service_guidance_01.png" width="150px" height="150px" alt="" />
+                  <img class="b-guidance__icon b-image" src="img/service_guidance_01.png" width="150px" height="150px" alt="" />
                   <p class="b-serviceGuidance__mainTitle">
                     <span class="br b-serviceGuidance__subTitle">様々なクリエイターが集結</span>
                     最適なWebサイトを制作
@@ -133,7 +135,7 @@
                 </div>
                 <div class="b-guidance b-guidance--service">
                   <p class="b-guidance__number flame flame--orange">02</p>
-                  <img class="b-guidance__icon" src="img/service_guidance_02.png" width="150px" height="150px" alt="" />
+                  <img class="b-guidance__icon b-image" src="img/service_guidance_02.png" width="150px" height="150px" alt="" />
                   <p class="b-serviceGuidance__mainTitle">
                     <span class="br b-serviceGuidance__subTitle">細やかな対応で不安感を払拭</span>
                     「わからない」をゼロに
@@ -141,7 +143,7 @@
                 </div>
                 <div class="b-guidance b-guidance--service">
                   <p class="b-guidance__number flame flame--orange">03</p>
-                  <img class="b-guidance__icon" src="img/service_guidance_03.png" width="150px" height="150px" alt="" />
+                  <img class="b-guidance__icon b-image" src="img/service_guidance_03.png" width="150px" height="150px" alt="" />
                   <p class="b-serviceGuidance__mainTitle">
                     <span class="br b-serviceGuidance__subTitle">制作における見えないコストを削減</span>
                     低価格の実現
@@ -183,6 +185,135 @@
                     <div class="kari-5 b-boxFlame__line b-boxFlame__line--yellow"></div>
                     <div class="kari-6 b-boxFlame__line b-boxFlame__line--yellow"></div>
                   </div>
+                </div>
+              </div> -->
+            <!-- </div> -->
+          </div>
+        </section>
+
+        <section class="l-S01 s-reason">
+          <div class="l-S02">
+            <div class="l-S03">
+              <div class="l-L01">
+                <div class="l-L02">
+                  <h2 class="b-heading__title icon icon--orange">
+                    <span class="emphasis">低価格</span>が実現できるワケ
+                  </h2>
+                </div>
+                <div class="l-L03">
+                  <p class="b-heading__text">SLashNextだからこそ様々なコスト削減が可能です</p>
+                  <p class="b-heading__text">
+                    クライアントに寄り添ったお見積りを心がけているため、安心してご利用ください。
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="l-L04">
+              <div class="l-L05 b-aboutContents">
+                <div class="b-guidance b-guidance--reason">
+                  <p class="b-guidance__number flame flame--blue">01</p>
+                  <img
+                    class="b-guidance__icon b-image"
+                    src="img/about_contents_03.png"
+                    width="180px"
+                    height="180px"
+                    alt=""
+                  />
+                  <p class="b-reasonGuidance__title">安定した人材確保</p>
+                </div>
+                <div class="b-guidance b-guidance--reason">
+                  <p class="b-guidance__number flame flame--blue">02</p>
+                  <img
+                    class="b-guidance__icon b-image"
+                    src="img/reason_guidance_01.png"
+                    width="180px"
+                    height="180px"
+                    alt=""
+                  />
+                  <p class="b-reasonGuidance__title">最適な人材配置</p>
+                </div>
+                <div class="b-guidance b-guidance--reason">
+                  <p class="b-guidance__number flame flame--blue">03</p>
+                  <img
+                    class="b-guidance__icon b-image"
+                    src="img/reason_guidance_02.png"
+                    width="180px"
+                    height="180px"
+                    alt=""
+                  />
+                  <p class="b-reasonGuidance__title"><span class="br">コミュニケーション</span>コストの削減</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="l-S03">
+              <div class="l-L06">
+                <div class="l-L07">
+                  <div class="l-L08">
+                    <p class="b-reasonContents__number">01</p>
+                    <h3 class="b-contents__title">安定した人材確保</h3>
+                  </div>
+                  <div class="l-L09">
+                    <p class="b-contents__text">
+                      人材を雇用して抱え込むことやプロジェクトに適した人をその都度集めることは容易ではなく、人材の確保には本来であれば時間的にも労働費用的にも大きなコストがかかっています。
+                    </p>
+                  </div>
+                  <div class="l-L10">
+                    <p class="b-reasonContents__boxText">常に一定数以上のクリエイターが稼働可能</p>
+                    <p class="b-reasonContents__boxResult">人材の確保にコストがかからない</p>
+                  </div>
+                </div>
+                <div class="l-L11">
+                  <img class="b-image" src="img/reason_keepstaff.png" alt="常に一定数以上のクリエイターが稼働可能" />
+                </div>
+              </div>
+              <div class="l-L06">
+                <div class="l-L07">
+                  <div class="l-L08">
+                    <p class="b-reasonContents__number">02</p>
+                    <h3 class="b-contents__title">最適な人材配置</h3>
+                  </div>
+                  <div class="l-L09">
+                    <p class="b-contents__text">
+                      Webサイト制作には幅広い知識と経験が求められるため、知見の浅い制作工程にも携わる場合が多く、調べながら制作を進める作業に多くの工程をかけています。
+                    </p>
+                  </div>
+                  <div class="l-L10">
+                    <p class="b-reasonContents__boxText">得意に合った人材配置でスマートな制作過程</p>
+                    <p class="b-reasonContents__boxResult">制作工数の削減につながる</p>
+                  </div>
+                </div>
+                <div class="l-L11">
+                  <img
+                    class="b-image"
+                    src="img/reason_assign.png"
+                    alt="例えばアニメーションの入った親しみやすいコーポレートサイトご依頼の場合。情報設計はコーポレートサイトが得意な人、デザインはイラストを使ったデザインが得意な人、コーディングはアニメーションが得意な人をアサインします。"
+                  />
+                </div>
+              </div>
+              <div class="l-L06">
+                <div class="l-L07">
+                  <div class="l-L08">
+                    <p class="b-reasonContents__number">03</p>
+                    <h3 class="b-contents__title"><span class="br">コミュニケーション</span>コストの削減</h3>
+                  </div>
+                  <div class="l-L09">
+                    <p class="b-contents__text">
+                      外部のフリーランスに作業の一部を委託する際などは、認識の齟齬を避けるために共通認識のすり合わせに時間がかかります。また、別々のシステム環境の中で作業をしているので、使用しているツールやルールが違うといった不都合も生まれます。
+                    </p>
+                  </div>
+                  <div class="l-L10">
+                    <p class="b-reasonContents__boxText">普段からコミュニケーションを交わしている</p>
+                    <p class="b-reasonContents__boxResult">共通認識のすり合わせに時間をかける必要がない</p>
+                  </div>
+                </div>
+                <div class="l-L11">
+                  <img
+                    class="b-image"
+                    src="img/reason_communication.png"
+                    alt="常に一定数以上のクリエイターが稼働可能"
+                  />
                 </div>
               </div>
             </div>
