difference PCレイアウト作成

--- a/index.html
+++ b/index.html
@@ -209,6 +209,41 @@
           </div>
         </section>
 
+        <section class="l-S01 s-difference">
+          <div class="l-S02">
+            <div class="l-S03">
+              <div class="l-L01"><h2 class="b-difference__mainTitle">他社との価格の違い</h2></div>
+              <div class="l-L02">
+                <div class="l-L03"><p class="b-difference__callText">例えばこのくらい！</p></div>
+                <div class="l-L04"><h3 class="b-contents__title">過去の案件の参考例</h3></div>
+                <div class="l-L05">
+                  <p class="b-difference__mainText">5ページのWebサイトをご依頼いただいた場合</p>
+                </div>
+                <div class="l-L06">
+                  <p class="b-difference__mainText flame b-boxFlame__lineCircle b-boxFlame__lineCircle--blue">
+                    <span class="br">トップ</span>ページ
+                  </p>
+                  <p class="b-difference__mainText flame b-boxFlame__lineCircle b-boxFlame__lineCircle--blue">
+                    <span class="br">下層</span>4ページ
+                  </p>
+                  <p class="b-difference__mainText flame b-boxFlame__lineCircle b-boxFlame__lineCircle--blue">
+                    <span class="br">スマホ</span>対応
+                  </p>
+                </div>
+                <div class="l-L07 b-boxFlame__shift b-boxFlame__shift--blue">
+                  <img class="b-image" src="img/difference.png" alt="" />
+                </div>
+                <div class="l-L08">
+                  <p class="b-difference__subText b-boxFlame__line b-boxFlame__line--blue">
+                    この金額は一例です。価格は<span class="red">ご依頼内容により変動</span
+                    >いたしますので、具体的なお見積りにつきましてはお問い合わせください。
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
         <section class="l-S01 s-reason">
           <div class="l-S02">
             <div class="l-S03">
