flow PCレイアウト作成

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                   </h2>
                 </div>
                 <div class="l-L03">
-                  <p class="b-heading__text">SLashNextだからこそ様々なコスト削減が可能です</p>
+                  <p class="b-heading__text">SLashNextだからこそ様々なコスト削減が可能です。</p>
                   <p class="b-heading__text">
                     クライアントに寄り添ったお見積りを心がけているため、安心してご利用ください。
                   </p>
@@ -369,6 +369,60 @@
                       alt="常に一定数以上のクリエイターが稼働可能"
                     />
                   </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="l-S01 s-flow">
+          <div class="l-S02">
+            <div class="l-S03">
+              <div class="l-L01">
+                <div class="l-L02">
+                  <h2 class="b-heading__title icon icon--orange">納品までの<span class="emphasis">流れ</span></h2>
+                </div>
+                <div class="l-L03">
+                  <p class="b-heading__text">ご依頼いただいてから納品までの流れは通常のWeb制作と変わりありません。</p>
+                  <p class="b-heading__text">
+                    制作フェーズの内部として、案件に沿ったクリエイターをアサインしています。
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="l-L04">
+              <div class="l-L05 b-aboutContents">
+                <div class="b-guidance b-guidance--flow">
+                  <p class="b-guidance__number flame flame--green">01</p>
+                  <img class="b-guidance__icon b-image" src="img/flow_01.png" width="100px" height="100px" alt="" />
+                  <p class="b-flowContents__title">ご依頼</p>
+                </div>
+                <div class="b-guidance b-guidance--flow">
+                  <p class="b-guidance__number flame flame--green">02</p>
+                  <img class="b-guidance__icon b-image" src="img/flow_02.png" width="100px" height="100px" alt="" />
+                  <p class="b-flowContents__title">打ち合わせ</p>
+                </div>
+                <div class="b-guidance b-guidance--flow">
+                  <p class="b-guidance__number flame flame--green">03</p>
+                  <img class="b-guidance__icon b-image" src="img/flow_03.png" width="100px" height="100px" alt="" />
+                  <p class="b-flowContents__title">お見積り</p>
+                </div>
+                <div class="b-guidance b-guidance--flow">
+                  <p class="b-guidance__number flame flame--green">04</p>
+                  <img class="b-guidance__icon b-image" src="img/flow_04.png" width="100px" height="100px" alt="" />
+                  <p class="b-flowContents__title">制作</p>
+                </div>
+                <div class="b-guidance b-guidance--flow">
+                  <p class="b-guidance__number flame flame--green">05</p>
+                  <img
+                    class="b-guidance__icon b-image"
+                    src="img/service_advantage_03.png"
+                    width="100px"
+                    height="100px"
+                    alt=""
+                  />
+                  <p class="b-flowContents__title">納品</p>
                 </div>
               </div>
             </div>
