--- a/parts.html
+++ b/parts.html
@@ -91,7 +91,7 @@
     <!-- flow -->
     <div class="b-guidance b-guidance--flow">
       <p class="b-guidance__number flame flame--green">01</p>
-      <img class="b-guidance__icon" src="img/flow_01.png" width="100px" height="100px" alt="" />
+      <img class="b-guidance__icon b-image" src="img/flow_01.png" width="100px" height="100px" alt="" />
       <p class="b-flowContents__title">ご依頼</p>
     </div>
 
