creator　PCレイアウト作成

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             </div>
 
             <div class="l-L04">
-              <div class="l-L05 b-aboutContents">
+              <div class="l-L05">
                 <div class="b-guidance b-guidance--service">
                   <p class="b-guidance__number flame flame--orange">01</p>
                   <img
@@ -263,7 +263,7 @@
             </div>
 
             <div class="l-L04">
-              <div class="l-L05 b-aboutContents">
+              <div class="l-L05">
                 <div class="b-guidance b-guidance--reason">
                   <p class="b-guidance__number flame flame--blue">01</p>
                   <img
@@ -392,7 +392,7 @@
             </div>
 
             <div class="l-L04">
-              <div class="l-L05 b-aboutContents">
+              <div class="l-L05">
                 <div class="b-guidance b-guidance--flow">
                   <p class="b-guidance__number flame flame--green">01</p>
                   <img class="b-guidance__icon b-image" src="img/flow_01.png" width="100px" height="100px" alt="" />
@@ -423,6 +423,93 @@
                     alt=""
                   />
                   <p class="b-flowContents__title">納品</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="l-S01 s-creator">
+          <div class="l-S02">
+            <div class="l-S03">
+              <div class="l-L01">
+                <div class="l-L02">
+                  <h2 class="b-heading__title icon icon--purpul">
+                    <span class="emphasis">所属クリエイター</span>について
+                  </h2>
+                </div>
+                <div class="l-L03">
+                  <p class="b-heading__text">
+                    <span class="br"
+                      >SLashNextの提供元である株式会社CRANKSが運営する「Webクリエイター育成スクール SLash」には、</span
+                    >フリーランスを目指す一定水準以上の人が集まっています。
+                  </p>
+                  <p class="b-heading__text">
+                    SLashNextは、SLashの受講生と卒業生の中から選抜された一部のクリエイターで構成されています。
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="l-L04">
+              <div class="l-L05">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+              </div>
+            </div>
+
+            <div class="l-S03">
+              <div class="l-L06">
+                <div class="l-L07">
+                  <div class="l-L08">
+                    <h3 class="b-contents__title b-contents__titlet--white">
+                      <span class="br">フリーランスWebクリエイター</span>育成スクール - SLash -
+                    </h3>
+                  </div>
+                  <div class="l-L09 m-creatorSlash">
+                    <div class="l-L10">
+                      <div class="l-L11">
+                        <p class="b-heading__text b-heading__text--white">
+                          自らの思考や行動によって新しい価値を創造し、自主的かつ継続的な経済活動を行えるクリエイターを育成します。
+                        </p>
+                      </div>
+                      <div class="l-L12">
+                        <p class="b-contents__text b-contents__text--white">
+                          SLashでは、単なる技術教育にとどまらず、人としての本質的な思考力や価値観の改善・育成を行うことを主題としています。「どんなスキルを身につけるか」ではなく「どんな人がスキルを身につけるか」に真意を見出し、社会から求められる優秀な人材教育をする中で技術教育も行います。
+                        </p>
+                      </div>
+                      <div class="l-L13">
+                        <a class="b-creatorContents__link">フリーランスWebクリエイター育成スクール - SLash -</a>
+                      </div>
+                    </div>
+                    <div class="l-L14 b-boxFlame__shift b-boxFlame__shift--pink"></div>
+                  </div>
+                </div>
+                <div class="l-L07">
+                  <div class="l-L08">
+                    <h3 class="b-contents__title b-contents__titlet--white">株式会社CRANKS</h3>
+                  </div>
+                  <div class="l-L09 m-creatorCranks">
+                    <div class="l-L10">
+                      <div class="l-L11">
+                        <p class="b-heading__text b-heading__text--white">
+                          株式会社CRANKSは、Webを中心に世の中に溢れる課題解決に挑むクリエイティブカンパニーです。
+                        </p>
+                      </div>
+                      <div class="l-L12">
+                        <p class="b-contents__text b-contents__text--white">
+                          Webサイト制作における企画提案、丁寧なヒアリング、クオリティの高いデザイン、コーディング、保守運用までトータルで行える2名の現役クリエイターが代表を務めます。
+                        </p>
+                      </div>
+                      <div class="l-L13">
+                        <a class="b-creatorContents__link">株式会社CRANKS</a>
+                      </div>
+                    </div>
+                    <div class="l-L14 b-boxFlame__shift b-boxFlame__shift--purple"></div>
+                  </div>
                 </div>
               </div>
             </div>
