faq PCレイアウト作成

--- a/index.html
+++ b/index.html
@@ -515,6 +515,69 @@
             </div>
           </div>
         </section>
+
+        <section class="l-S01 s-faq">
+          <div class="l-S02">
+            <div class="l-S03">
+              <div class="l-L01">
+                <div class="l-L02">
+                  <h2 class="b-heading__title icon icon--yellow">よくある<span class="emphasis">質問</span></h2>
+                </div>
+                <ul class="l-L03">
+                  <li class="b-boxFlame__line b-boxFlame__line--yellow">
+                    <dl class="b-faqContents__box">
+                      <dt class="b-faqContents__boxTitle">SLashNextとはどのようなサービスですか？</dt>
+                      <dd class="b-contents__text">
+                        株式会社CRANKSと幅広い強みを持ったクリエイター陣によるWebサイト制作プロジェクトです。所属しているクリエイター全員が個々人の様々な強みを発揮し、クライアントに高品質で低価格なWebサイト制作を提供することを目的としています。
+                      </dd>
+                    </dl>
+                  </li>
+                  <li class="b-boxFlame__line b-boxFlame__line--yellow">
+                    <dl class="b-faqContents__box">
+                      <dt class="b-faqContents__boxTitle">相場と比べてどのくらい安くなりますか？</dt>
+                      <dd class="b-contents__text">
+                        金額の詳細につきましては一概にはお伝えできません。価格はご依頼内容などにより変動いたしますので、詳しくはお気軽にお問い合わせください。
+                      </dd>
+                    </dl>
+                  </li>
+                  <li class="b-boxFlame__line b-boxFlame__line--yellow">
+                    <dl class="b-faqContents__box">
+                      <dt class="b-faqContents__boxTitle">制作期間はどのくらいですか？</dt>
+                      <dd class="b-contents__text">
+                        制作するWebサイトの規模感などにより変動しますが、通常のWebサイト制作と同様の制作期間を見込んでいただければ良いかと思います。詳しくはお気軽にお問い合わせください。
+                      </dd>
+                    </dl>
+                  </li>
+                  <li class="b-boxFlame__line b-boxFlame__line--yellow">
+                    <dl class="b-faqContents__box">
+                      <dt class="b-faqContents__boxTitle">
+                        制作着手後に追加したい要素が発生した場合は対応していただけますか？
+                      </dt>
+                      <dd class="b-contents__text">対応いたします。</dd>
+                      <dd class="b-contents__text">
+                        制作時期や追加要素の内容により追加料金が変動いたしますので、都度お見積りを作成させていただきます。
+                      </dd>
+                    </dl>
+                  </li>
+                  <li class="b-boxFlame__line b-boxFlame__line--yellow">
+                    <dl class="b-faqContents__box">
+                      <dt class="b-faqContents__boxTitle">所属しているクリエイターの人数はどのくらいですか？</dt>
+                      <dd class="b-contents__text">2022年11月時点で20人以上のクリエイターが所属しています。</dd>
+                    </dl>
+                  </li>
+                  <li class="b-boxFlame__line b-boxFlame__line--yellow">
+                    <dl class="b-faqContents__box">
+                      <dt class="b-faqContents__boxTitle">ロゴや印刷物などの依頼は受け付けていますか？</dt>
+                      <dd class="b-contents__text">
+                        SLashNextではWebサイト制作に関連するご依頼のみを対象としていますので、ロゴや印刷物などをご希望の場合は株式会社CRANKSへご依頼ください。
+                      </dd>
+                    </dl>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
 
       <footer class="footer"></footer>
