--- a/index.html
+++ b/index.html
@@ -578,6 +578,21 @@
             </div>
           </div>
         </section>
+
+        <section class="l-S01 s-message">
+          <div class="l-S02">
+            <div class="l-S03">
+              <div class="l-L01">
+                <div class="l-L02"><h2 class="b-messageContents__title">本質的な成長に向けて</h2></div>
+                <div class="l-L03">
+                  <p class="b-contents__text">
+                    私たちがWeb制作を通して目指す先は「まだない価値を生み出せるカンパニー」です。そのために必要なものはいくつかありますが、最も大切なものは共に夢を目指せる仲間だと考えています。そして、仲間に対して一番求めているのは人間性。案件を通して技術に磨きをかけるだけではなく、仲間と共に案件を乗り越えて人間性を高めていってほしい。このような想いで、高品質で低価格なWeb制作プロジェクトを立ち上げました。
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
 
       <footer class="footer"></footer>
